# appraisals

./: .gitignore  README.md  build.gradle  environment.yml  pyproject.toml
config/: env.example
docs/: API_REFERENCE.md
scripts/: build_uad_mapping_from_vendor.py
src/appraisal_ai/: __init__.py  cli.py  settings.py
src/appraisal_ai/clients/: __init__.py
src/appraisal_ai/uad/: __init__.py  canonical.py  mapping.py  migrate.py  xml_paths.py  zip_package.py
src/appraisal_ai/uad/data/: __init__.py  appendix_g_mapping.csv
tests/: test_cli.py  test_uad_migrate.py  test_uad_zip.py
tests/fixtures/uad/: legacy_minimal.xml  uad36_minimal.xml
