[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appraisal-ai"
version = "0.1.0"
description = "CRE appraisal narrative generation (data-grounded, RAG-oriented)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "AppraisalAI" }]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.8",
]

[project.scripts]
appraisal-ai = "appraisal_ai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
packages = ["appraisal_ai"]
strict = true
